Stop trimming whitespace in liquid

--- a/docs/_sass/_includes/banner.scss
+++ b/docs/_sass/_includes/banner.scss
@@ -3,11 +3,11 @@
 .banner {
   background-color: $color-dark-bg;
   color: $color-dark-fg;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: normal;
   line-height: 1.2;
-  padding: 12px;
+  padding: 10px;
   text-align: center;
 
   & a {
